# nook

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bundle.sh  ctl.sh  make-dmg.sh  make-icon.sh
assets/: Nook.icns  make-dmg-bg.py
clearbar.app/Contents/: Info.plist
clearbar.app/Contents/MacOS/: clearbar
docs/: README.md
docs/decisions/: 001-rust-objc2-stack.md  002-second-row-ux.md  003-no-bartender-hacks.md  004-second-row-requires-hacks.md  005-ux-behavior.md  006-edit-mode-and-settings.md  007-deterministic-status-item-placement.md  008-bundle-id-isolation.md  009-launch-at-login.md  010-context-menu-position.md  README.md
docs/drafts/: ux-behavior-raw.md
docs/project/: OVERVIEW.md  README.md
docs/research/: README.md
docs/research/journals/: 001-rust-objc2-menubar.md  002-ice-bar-on-tahoe-rust.md  003-status-item-order-and-hide.md  004-anchor-position-bundle-identity.md  005-hypothesis-test-plan.md  006-fix-iterations-plan.md  007-deterministic-placement.md  008-invisible-right-edge-clipping.md  009-zombie-bundle-id-autosave.md
scripts/: test-stand.sh
sprints/: README.md  RULES.md
sprints/archive/: 01_CORE_status-item-ffi.md  02_CORE_hide-show.md
sprints/planned/: 03_UI_second-row.md  04_CORE_autohide-timer.md  05_CORE_settings-hotkey-autostart.md  06_UI_icon-branding.md
sprints/roadmap/: ROADMAP.md
src/: auto_collapse.rs  controller.rs  log.rs  login.rs  main.rs  menu.rs  status_bar.rs  strings.rs
