[package]
name = "nook"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Hide extra menu bar icons on macOS. Native, lightweight, no hacks."
license = "MIT"
repository = "https://github.com/hypnosis/nook"
readme = "README.md"

[dependencies]
objc2 = "0.6.4"
block2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSTimer", "NSDate", "NSLocale", "NSArray", "NSString"] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSEvent",
    "NSImage",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSScreen",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView",
    "NSWindow",
    "objc2-core-foundation",
] }
objc2-core-foundation = "*"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
